# smart_parking

./: .pre-commit-config.yaml  pyproject.toml
docs/: context-map.md  domain-events.md  glossary.md
src/smart_parking/domain/: license_plate.py  money.py  parking_session.py
tests/domain/: test_parking_session.py
