# pyproject.toml
[tool.poetry]
name = "smart-parking"
version = "0.1.0"
description = ""
authors = ["German713u <german713u@gmail.com>"]
packages = [{ include = "smart_parking", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = { version = "^2.0.40", extras = ["asyncio"] }
pydantic = "^2.11.3"
requests = "^2.32.3"
aiohttp = "^3.11.16"
uvicorn = "^0.34.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"